--- a/themes/evak_light.css
+++ b/themes/evak_light.css
@@ -1,11 +1,13 @@
 html {
     height: 100%;
+    width: 100%;
     margin: 0;
     padding: 0;
-    
-    
 }
 
+.login {
+    display: none;
+}
 
 
 @media screen and (max-width: 670px) {
@@ -116,6 +118,72 @@ html {
 
 @media screen and (min-width: 671px) {
     /* DESKTOP STYLE */
+    .loginOverlay  {
+        z-index: 10;
+        position: fixed;
+        opacity: 0;
+        width: 100vw;
+        height: 100vh;
+        overflow: hidden;
+        background: rgba(0,0,0,.6);
+        transition: opacity 200ms ease-in-out;
+        pointer-events: none;
+        backdrop-filter: blur(8px);
+        
+    }
+
+    .loginbox > img {
+        width: 300px;
+        margin: 10px;
+        
+    }
+    .loginbox > div {
+        
+        display: inline-block;
+        width: 70%;
+        height: 10%;
+        margin-bottom: 30px;
+        padding-top: 5px;
+        border: 1px solid #bbb;
+        border-radius: 10px;
+    }
+
+    .loginbox > div > label {
+        display: block;
+        font-size: 16px;
+        position: relative;
+        top: -15px;
+        text-align: left;
+        margin-left: 30px;
+        background: #eee;
+        width: fit-content;
+        padding: 0 10px;
+        border: 1px solid #bbb;
+        border-radius: 5px;
+    }
+    .loginbox > div > input {
+        width: 80%;
+        border: 1px solid black;
+        border-radius: 5px;
+        padding: 6px;
+        color: #555;
+    }
+    .loginbox {
+        text-align: center;
+        align-content: center;
+        background: linear-gradient(#fff, #eee);
+        color: black;
+        width: 25%;
+        min-width: 350px;
+        height: 70%;
+        min-height: 700px;
+        transform: translate(37.5vw, 15vh);
+        box-shadow: rgba(0, 0, 0, .8) 0 0 30px 5px;
+        border-radius: 5px;
+        
+
+    }
+
 
     body {
         margin: 0;
@@ -123,8 +191,10 @@ html {
         margin-left: calc(100vw - 100%);
         align-content: center;
         text-align: center;
-        font-family: 'Roboto', sans-serif;
+        font-family: 'Ubuntu', sans-serif;
         overflow-x: hidden;
+        background: #555;
+
         
         
         
@@ -132,10 +202,20 @@ html {
 
     #mainWindow {
         
+        background: #eee;
+        align-content: center;
+        overflow: hidden;
+        width: 100%;
+        height: 100vh;
+        box-shadow: 0 3px 60px black, 0 3px 10px 6px black;
+        margin-left: 0%
+        
+
         
     }
     h1 {
-        font-size: 20px;
+        font-size: 30px;
+        color: black;
     }
 
     a {
@@ -144,26 +224,45 @@ html {
         margin-left: 10%;
         text-align: left;
     }
+
+    .pageContent > a:hover {
+        text-decoration: underline 1px black !important;
+    }
     hr {
         color: rgba(0,0,0,0);
         border-bottom: 2px solid grey;
         
     }
     p {
-        padding: 2px 50px;
+        background: #fff;
+        border: 1px solid #ccc;
+        border-radius: 3px;
+        padding: 10px 20px;
+        position:relative;
+        left: 10%;
+        width: 80%;
         text-align: left;
-        font-size: 12px;
+        font-size: 16px;
+        font-weight: 300;
     }
     .imgContainer > img {
-        width: 30%;
-        height: 100%;
-        min-width: 120px;
+
+        width: 20%;
+        min-width: 60px;
+        animation: swing alternate ease-in-out infinite 2s;
+        padding: 20px;
     }
 
     .imgContainer {
+
+        border-bottom: 1px solid #ccff00;
+        
+        box-shadow: 0 3px 60px rgba(0, 0, 0, .5), 0 3px 10px 6px rgb(100, 100, 100);
         padding: 0;
         margin: 0;
-        background: #3399ff;
+        background: linear-gradient(#3399ff, #0470d6);
+        width: 100%;
+        
 
     }
     .version {
@@ -172,9 +271,11 @@ html {
     }
 
     #whatIsEvak {
-        text-decoration: underline #3399ff 2px;
+        text-decoration: none;
         color: black;
         display: block;
+        font-size: 20px;
+        font-weight: 600;
         
     }
     .whatIsEvak {
@@ -182,59 +283,99 @@ html {
     }
 
     #howItWorks {
-        text-decoration: underline #3399ff 2px;
+        text-decoration: none;
         color: black;
         display: block;
+        font-size: 20px;
+        font-weight: 600;
     }
     .howItWorks {
         display: none;
     }
     #whosItFor {
-        text-decoration: underline #3399ff 2px;
+        text-decoration: none;
         color: black;
         display: block;
+        font-size: 20px;
+        font-weight: 600;
     }
     .whosItFor {
         display: none;
     }
     #pricing {
-        text-decoration: underline #3399ff 2px;
+        text-decoration: none;
         color: black;
         display: block;
+        font-size: 20px;
+        font-weight: 600;
     }
     .pricing {
         display: none;
     }
     
-    #enter, #contact {
+    .btn1 {
         transition: all 200ms;
         text-align: center;
         user-select: none;
         position: relative;
         display: inline-block;
-        bottom: 0px;
         background: #ccff00;
         border: 1px solid #ccff00;
         box-shadow: 0 0 3px rgba(0, 0, 0, .3);
         border-radius: 2px;
         padding: 5px 15px;
-        width: 30%;
-        margin: 70px 2vw;
+        width: 100px;
+        height: 20px;
+        justify-content: center;
+        margin: 10px 2vw;
         font-weight: 700;
         font-size: 14px;
         text-decoration: none;
         outline: none;
     }
-    #enter:hover, #contact:hover {
+    .btn2 {
+        transition: all 200ms;
+        text-align: center;
+        user-select: none;
+        position: relative;
+        display: inline-block;
+        background: #ccff00;
+        border: 1px solid #ccff00;
+        box-shadow: 0 0 3px rgba(0, 0, 0, .3);
+        border-radius: 2px;
+        padding: 5px 15px;
+        width: 200px;
+        height: 30px;
+        justify-content: center;
+        vertical-align: middle;
+        margin: 10px 2vw;
+        font-weight: 700;
+        font-size: 14px;
+        text-decoration: none;
+        outline: none;
+    }
+
+    .btnContainer {
+        display: block;
+    }
+    .btn1:hover, .btn2:hover {
         background: #aadd00;
         border: #3399ff 1px solid;
         
     }
-    #enter:active, #contact:active {
+    .btn1:active, .btn2:active {
         background: #3399ff;
         border: #ccff00 1px solid;
         color: white;
         transition: none;
+        
+    }
+
+
+    @keyframes swing {
+    
+        0% {transform: rotate(3deg) scale(1);}
+        100% {transform: rotate(-3deg) scale(1.1);}
         
     }
 }
