SPA and chat module

--- a/public/underconstruction.css
+++ b/public/underconstruction.css
@@ -12,7 +12,7 @@ body {
     display: table-cell;
     vertical-align: middle;
     font-family: 'Roboto', sans-serif;
-    background: #3399ff;
+    background: #222;
     text-align: center;
     color: white;
     text-shadow: 3px 5px 6px rgba(0, 0, 0, .7), 0 0 5px black;
