--- a/themes/protected.css
+++ b/themes/protected.css
@@ -1,21 +1,21 @@
 #rollerDiv {
+    z-index: 101;
     display: inline-block;
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-
+    backdrop-filter: blur(3px);
     overflow: hidden;
-    background: #888;
+    background: rgba(0, 0, 0, 0.5);
     justify-content: center;
     align-content: center;
-
-    
 
 }
 
 #rollerDiv>.container {
+
     position: relative;
     background: #888;
     display: inline-block;
@@ -25,6 +25,8 @@
     height: auto;
     padding: 0;
     left: 0;
+    border-radius: 100%;
+    box-shadow: black 0 0 10px 2px;
     
     
 }
@@ -36,6 +38,7 @@
     margin: 0;
     /*     width: 200px; */
     width: 100%;
+    border-radius: 100%;
 
     
 }
@@ -86,6 +89,15 @@
     box-shadow: 0 0 3px rgba(0, 0, 0, .8), 0 0 10px rgba(0, 0, 0, .6);
     ;
 }
+._HOVER_BORDER:hover {
+    box-shadow: 0 0 0 2px white, 0 0 0 4px black;
+    transition: box-shadow 100ms ease;
+}
+._HOVER_SCALE:hover {
+    transform: scale(1.1);
+    box-shadow: 4px 45px 25px 0 rgba(0, 0, 0, .3);
+    transition: box-shadow 100ms ease, transform 100ms ease;
+}
 
 #mainframe {
     -ms-overflow-style: none;
@@ -104,6 +116,7 @@
     margin-top: 50px;
     z-index: 11;
     transition: all 200ms ease-out;
+    text-align: center;
 }
 
 .shrinkmainframe {
@@ -201,4 +214,48 @@
 .lgtbtn1:hover {
     box-shadow: #cf0 0 0 2px 2px, #cf0 0 0 20px 2px;
     color: #aaa;
+}
+
+#spinner {
+    z-index: 100;
+    position: fixed;
+    display: block;
+    overflow: hidden;
+    user-select: none;
+    width: 100vw;
+    height: 100vh;
+    top: 0;
+    left: 0;
+    background: rgba(0, 0, 0, .5);
+    backdrop-filter: blur(5px);
+}
+
+#spinner > img {
+    position: relative;
+    display: block;
+    width: 150px;
+    height: 150px;
+    margin: auto auto;
+    border-radius: 100%;
+    padding: 0;
+    top: calc(50% - 75px)
+    
+}
+
+.color_blue {
+    background: #37d;
+}
+
+.color_blue:hover {
+    background: #59f;
+}
+.color_red {
+    background: #c22;
+}
+.color_red:hover {
+    background: #e55;
+}
+
+.color_green {
+    background: #8b5;
 }
